[package]
name = "swordfish"
version = "0.1.6"
edition = "2024"
description = "High Performance Data Oriented Design Library for Large-Scale Simulation"
repository = "https://github.com/dangkaz1109/SwordfishDOD"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
rayon = "1.10"
paste = "1.0"
hecs = "0.10"
rand = "0.9"
macroquad = "0.4.14"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
name = "swordfish"
path = "src/lib.rs"
