[package]
name = "swordfish"
version = "0.1.9"
edition = "2024"
description = "Swordfish is a Data-Oriented Design (DOD) Logic Layer for large scale social based simulations / games. It's designed for fast query / discrete graphs processing performance and the ease of use."
repository = "https://github.com/dangkaz1109/SwordfishDOD"
license = "Apache-2.0"
readme = "README.md"

[dependencies]


[lib]
name = "swordfish"
path = "src/lib.rs"
